2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More C99 compatibility.

	* lib/include/undocumented.h,
	* lib/include/cmalloc.h: Move declarations into...

	* lib/include/cstring.h,
	* lib/include/cstdlib.h: ...here.

	* lib/include/sac_helpers.h: Update accordingly.
	* lib/Makefile.am: List the new headers.

	* lib/include/cmalloc.h: Deprecate.

	* lib/src/atoi.c,
	* lib/src/atol.c,
	* lib/src/atoll.c,
	* lib/src/getenv.c,
	* lib/src/malloc_wrappers.c,
	* lib/src/mtinit.c,
	* lib/src/perf.c,
	* lib/src/stpcpy.c,
	* lib/src/stpncpy.c,
	* lib/src/strchr.c,
	* lib/src/strcpy.c,
	* lib/src/strdup.c,
	* lib/src/strlen.c,
	* lib/src/strncmp.c,
	* lib/src/strncpy.c,
	* lib/src/strtol.c,
	* lib/src/strtoll.c,
	* lib/src/strtoull.c: Use the new header names.

	* lib/mtalpha.mk: Silence (known) warnings.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the SL standard library.
	
	* lib/include/undocumented.h: Add more C99 declarations.

	* lib/src/atoi.c,
	* lib/src/atol.c,
	* lib/src/atoll.c,
	* lib/src/strtol.c,
	* lib/src/strtoll.c,
	* lib/src/strtoul.c,
	* lib/src/strtoull.c: New.

	* lib/mtalpha.mk: Update accordingly.
	
2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Misc fixes to MT-Alpha code generation.

	A number of quirks were discovereed when manually inspecting
	assembly source. While these may not be functional bugs they
	caused potentially inefficient code to be generated.

	* tools/bin/spp (pppalpha.rmswchbegin): Also disallow `swch'
	directly after a label.

	* tools/bin/spp (prunenopend): flush swch/nop/fnop sequences also
	when encountering a directive, instead of skipping until the next
	instruction. This prevents patterns like "br; swch; .align" from
	being transformed into "br; .align; swch".

	* tools/bin/spp (pppalpha.addswchll): shorten comments.

	* tools/bin/spp (pppalpha.printer): use less whitespace.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in support for the `fast_' allocation routines.
