@@ -1,5 +1,12 @@
 2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Extend the SL standard library.
+
+	* lib/include/cstdarg.h: New.
+	* lib/Makefile.am: Update accordingly.
+
+2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	More C99 compatibility.
 
 	* lib/include/undocumented.h,
